[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "midea_inventor_lib"
version = "1.0.9"
description = "Client-side Python library for EVA II PRO WiFi Smart Dehumidifier appliance by Midea/Inventor."
readme = "README.md"
authors = [
    {name = "Andrea Barbaresi", email = "barban.mobile@google.com"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.4"
dependencies = [
    "requests>=2.32.0",
    "pycryptodome>=3.6.6"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
"Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/barban-dev/midea_inventor_dehumidifier"
